test/calibre/manifests/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: calibre-network-policy
  namespace: calibre
  labels:
    app.kubernetes.io/name: calibre
    app.kubernetes.io/managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: calibre
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8083"
              protocol: TCP
